@@ -9,7 +9,6 @@ HIGH
 - multi-line center-justified text, for slider and concentration display titles
 
 MEDIUM
-- scenery needs a way to get number of children, and to remove the last child that was added
 
 LOW
 - port CompositeProperty, use in Solution
